--- a/Noteboooks/Weekly Reports-Copy1.ipynb
+++ b/Noteboooks/Weekly Reports-Copy1.ipynb
@@ -254,14 +254,7 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "# I create two DataFrame for Superset_DR12Q and data_dr12 with only three parameters\n",
-    "data1={'PLATE':data_PLATE_1,'MJD':data_MJD_1,'FIBERID':data_FIBERID_1,'ID':data_ID_1}\n",
-    "data1=pd.DataFrame(data=data1)\n",
-    "\n",
-    "data2={'PLATE':data_PLATE_2,'MJD':data_MJD_2,'FIBERID':data_FIBERID_2,'ID':data_ID_2}\n",
-    "data2=pd.DataFrame(data=data2)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -280,6 +273,13 @@
     }
    ],
    "source": [
+    "# I create two DataFrame for Superset_DR12Q and data_dr12 with only three parameters\n",
+    "data1={'PLATE':data_PLATE_1,'MJD':data_MJD_1,'FIBERID':data_FIBERID_1,'ID':data_ID_1}\n",
+    "data1=pd.DataFrame(data=data1)\n",
+    "\n",
+    "data2={'PLATE':data_PLATE_2,'MJD':data_MJD_2,'FIBERID':data_FIBERID_2,'ID':data_ID_2}\n",
+    "data2=pd.DataFrame(data=data2)\n",
+    "\n",
     "# I convert all objects in both set to string chain in orden to combine them as one new ID.\n",
     "data1['PLATE']=data1['PLATE'].astype(str)\n",
     "data1['MJD']=data1['MJD'].astype(str)\n",
@@ -299,7 +299,19 @@
     "data2['PM'] = data2['MJD'].str.cat(data2['FIBERID'],sep=\"-\")\n",
     "data2['NEWID'] = data2['PLATE'].str.cat(data2['PM'],sep=\"-\")\n",
     "data_2=data2.drop(columns=['PLATE','MJD','FIBERID','ID','PM']).values # New set of database 2 with new ID's\n",
-    "print(data_2.shape)"
+    "print(data_2.shape)\n",
+    "\n",
+    "# With the routine of numpy intersect1d, I find the intersections elements in both sets. This elements  \n",
+    "data_CO=np.array(np.intersect1d(data_1,data_2,return_indices=True))\n",
+    "\n",
+    "data_CO_objects=data_CO[0] # The unique new ID of each element in both sets\n",
+    "data_CO_ind1=data_CO[1] # Indices of intersected elements from the original data 1 (Superset_DR12Q.fits) \n",
+    "data_CO_ind2=data_CO[2] # Indices of intersected elements form the original data 2 (data_dr12.fits)\n",
+    "print('I find',len(data_CO_objects),'objects with spectra from DR12')\n",
+    "print(data_CO_ind1,data_CO_ind2)\n",
+    "indi={'ind1':data_CO_ind1,'ind2':data_CO_ind2}\n",
+    "ind=pd.DataFrame(data=indi,index=data_CO_ind1)\n",
+    "\n"
    ]
   },
   {
@@ -318,19 +330,7 @@
      ]
     }
    ],
-   "source": [
-    "# With the routine of numpy intersect1d, I find the intersections elements in both sets. This elements  \n",
-    "data_CO=np.array(np.intersect1d(data_1,data_2,return_indices=True))\n",
-    "\n",
-    "data_CO_objects=data_CO[0] # The unique new ID of each element in both sets\n",
-    "data_CO_ind1=data_CO[1] # Indices of intersected elements from the original data 1 (Superset_DR12Q.fits) \n",
-    "data_CO_ind2=data_CO[2] # Indices of intersected elements form the original data 2 (data_dr12.fits)\n",
-    "print('I find',len(data_CO_objects),'objects with spectra from DR12')\n",
-    "print(data_CO_ind1,data_CO_ind2)\n",
-    "indi={'ind1':data_CO_ind1,'ind2':data_CO_ind2}\n",
-    "ind=pd.DataFrame(data=indi,index=data_CO_ind1)\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
