Data Loader 1.2 and 40k data

--- a/Noteboooks/Data_Loader_1-Copy1.0.ipynb
+++ b/Noteboooks/Data_Loader_1-Copy1.0.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Data_Loader_1-Copy1.0.ipynb to python\n",
-      "[NbConvertApp] Writing 7294 bytes to Data_Loader_1-Copy1.0.py\n"
+      "[NbConvertApp] Writing 7317 bytes to Data_Loader_1-Copy1.0.py\n"
      ]
     }
    ],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -59,7 +59,7 @@
     "    data=hdul[1].data # Database of spectra with human-expert classifications \n",
     "\n",
     "    # Reading data from data_dr12.fits. This file had the spectra from data dr12. \n",
-    "    hdul_2 = fits.open(file_2) # Open file 2 -- data_dr12.fits\n",
+    "    hdul_2 = fits.open(file_2) # Open file 2 -- 'data_dr12.fits'\n",
     "    info=hdul_2.info() # File info \n",
     "    columns=hdul_2[1].columns # File Columns\n",
     "    print(hdul,'/n',columns)\n",
@@ -77,6 +77,8 @@
     "    # Subset of FIBERID parameters of both data\n",
     "    data_FIBERID_1=data['FIBERID']\n",
     "    data_FIBERID_2=data2['FIBERID']\n",
+    "    data_ID_1=data['THING_ID']\n",
+    "    data_ID_2=data2['TARGETID']\n",
     "    \n",
     "    # The column 'CLASS_PERSON' have a class identifier for each spectrum: STARS=1, GALAXY=4, QSO=3 and QSO_BAL=30.\n",
     "    C_P=data['CLASS_PERSON'] #Class Person column \n",
@@ -173,16 +175,15 @@
     "\n",
     "    X=X.values # Spectra\n",
     "    \n",
-    "    if(classification==False):\n",
+    "    if(classification!=True):\n",
     "        y=sample_objects['Z_VI']\n",
     "        y=np.array(y,dtype=float)\n",
     "        return X,y\n",
-    "    \n",
-    "    y=sample_objects['CLASS_PERSON']\n",
-    "    y=y.replace([1, 4, 3, 30], [0,1,2,3]).values\n",
-    "    y=np.array(y,dtype=float)\n",
-    "    return X,y\n",
-    "\n"
+    "    else:  \n",
+    "        y=sample_objects['CLASS_PERSON']\n",
+    "        y=y.replace([1, 4, 3, 30], [0,1,2,3]).values\n",
+    "        y=np.array(y,dtype=float)\n",
+    "        return X,y"
    ]
   },
   {
@@ -191,9 +192,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "def Loader(X,y,N_sample=20000,epoc=10):\n",
     "    \n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
