Data Loader 1.3 and 40k data

--- a/Noteboooks/Weekly _Reports_CNN.ipynb
+++ b/Noteboooks/Weekly _Reports_CNN.ipynb
@@ -497,12 +497,12 @@
     "print(d1[0].shape)\n",
     "y_pred=torch.cat((d[0],d[1]),0)\n",
     "y_test=torch.cat((d1[0],d1[1]),0)\n",
-    "print(y_pred)"
+    "print(y_pred.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -511,17 +511,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Confusion matrix, without normalization\n",
-      "[[2047    0    0    0]\n",
-      " [   0 1967    0    0]\n",
-      " [   0    0 1986    0]\n",
-      " [   0    0    0 2000]]\n",
-      "Confusion matrix, without normalization\n",
-      "[[1702  306   31    8]\n",
-      " [ 133 1773   48   13]\n",
-      " [  61  271  843  811]\n",
-      " [  17   99  204 1680]]\n",
-      "(array([0.89, 0.72, 0.75, 0.67]), array([0.83, 0.9 , 0.42, 0.84]), array([0.86, 0.8 , 0.54, 0.74]), array([2047, 1967, 1986, 2000]))\n"
+      "Precision: Star: 0.8897 | Galaxy: 0.724 | QSO: 0.7487 | QSO_BAL: 0.6688\n",
+      "Recall: Star: 0.8315 | Galaxy: 0.9014 | QSO: 0.4245 | QSO_BAL: 0.84\n",
+      "F_score: Star: 0.8596 | Galaxy: 0.803 | QSO: 0.5418 | QSO_BAL: 0.7447\n",
+      "Support: Star: 2047 | Galaxy: 1967 | QSO: 1986 | QSO_BAL: 2000\n"
      ]
     },
     {
@@ -567,13 +560,14 @@
     "    cm = confusion_matrix(y_true, y_pred)\n",
     "    # Only use the labels that appear in the data\n",
     "    classes = classes\n",
+    "    \"\"\"\n",
     "    if normalize:\n",
     "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
     "        print(\"Normalized confusion matrix\")\n",
     "    else:\n",
     "        print('Confusion matrix, without normalization')\n",
-    "\n",
-    "    print(cm)\n",
+    "    \"\"\"\n",
+    "    #print(cm)\n",
     "    fig, ax = plt.subplots()\n",
     "    im = ax.imshow(cm, interpolation='nearest', cmap=cmap)\n",
     "    ax.figure.colorbar(im, ax=ax)\n",
@@ -616,9 +610,12 @@
     "plt.savefig('cm_test.png')\n",
     "\n",
     "from sklearn.metrics import precision_recall_curve\n",
-    "prf=precision_recall_fscore_support(y_test, y_pred, average=None)#,labels=['Star','Galaxy','QSO','QSO_BAL'])\n",
+    "p,r,f,s=precision_recall_fscore_support(y_test, y_pred, average=None)#,labels=['Star','Galaxy','QSO','QSO_BAL'])\n",
     "\n",
-    "print(prf)"
+    "print('Precision:','Star:',round(p[0],4),'| Galaxy:',round(p[1],4),'| QSO:',round(p[2],4),'| QSO_BAL:',round(p[3],4))\n",
+    "print('Recall:','Star:',round(r[0],4),'| Galaxy:',round(r[1],4),'| QSO:',round(r[2],4),'| QSO_BAL:',round(r[3],4))\n",
+    "print('F_score:','Star:',round(f[0],4),'| Galaxy:',round(f[1],4),'| QSO:',round(f[2],4),'| QSO_BAL:',round(f[3],4))\n",
+    "print('Support:','Star:',round(s[0],4),'| Galaxy:',round(s[1],4),'| QSO:',round(s[2],4),'| QSO_BAL:',round(s[3],4))"
    ]
   },
   {
