--- a/Noteboooks/Weekly _Reports_CNN.ipynb
+++ b/Noteboooks/Weekly _Reports_CNN.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -470,7 +470,7 @@
       "Accuracy of the network on the test images: 74 %\n",
       "torch.Size([4000])\n",
       "torch.Size([4000])\n",
-      "tensor([2, 0, 0,  ..., 1, 2, 2])\n"
+      "torch.Size([8000])\n"
      ]
     }
    ],
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {
     "scrolled": false
    },
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -631,13 +631,14 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy of  Star :  0 %\n",
-      "Accuracy of Galaxy : 50 %\n",
-      "Accuracy of   QSO : 100 %\n",
-      "Accuracy of QSO_BAL : 100 %\n"
+     "ename": "ZeroDivisionError",
+     "evalue": "float division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-25-264a1b531f85>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     print('Accuracy of %5s : %2d %%' % (\n\u001b[0;32m---> 18\u001b[0;31m         classes[i], 100 * class_correct[i] / class_total[i]))\n\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: float division by zero"
      ]
     }
    ],
