Data Loader 1.5 and 40k data

--- a/Noteboooks/Weekly _Reports_CNN.ipynb
+++ b/Noteboooks/Weekly _Reports_CNN.ipynb
@@ -283,7 +283,8 @@
    "metadata": {
     "scrolled": true,
     "tags": [
-     "SpectraNET"
+     "SpectraNET",
+     "Classification"
     ]
    },
    "outputs": [
@@ -389,7 +390,7 @@
     "learning_rate=0.01\n",
     "log_interval=10\n",
     "epoc=10\n",
-    "class Net(nn.Module):\n",
+    "class Net_C(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Net, self).__init__()\n",
     "        self.conv1 = nn.Conv1d(1, 100, 10,stride=2)\n",
@@ -412,12 +413,20 @@
     "        x = F.relu(self.fc1(x))        \n",
     "        x = self.fc2(x)\n",
     "        return F.log_softmax(x)\n",
-    "    \n",
-    "net = Net()\n",
-    "print(net)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net_C = Net_C()\n",
+    "print(net_C)\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(net.parameters(), lr=0.001)\n",
+    "optimizer = optim.Adam(net_C.parameters(), lr=0.001)\n",
     "\n",
     "def train(epoch):\n",
     "    #model.train()\n",
@@ -427,7 +436,7 @@
     "       \n",
     "        optimizer.zero_grad()\n",
     "        \n",
-    "        output = net(data)\n",
+    "        output = net_C(data)\n",
     "        loss = criterion(output, target)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
@@ -440,7 +449,7 @@
     "    \n",
     "\n",
     "\n",
-    "# Train loop\n",
+    "# Training loop\n",
     "for i in range(epoc):\n",
     "    print('Epoc:',i,'/n')\n",
     "    train(i)\n",
@@ -612,37 +621,30 @@
     "from sklearn.metrics import precision_recall_curve\n",
     "p,r,f,s=precision_recall_fscore_support(y_test, y_pred, average=None)#,labels=['Star','Galaxy','QSO','QSO_BAL'])\n",
     "\n",
+    "print('Support:','Star:',round(s[0],4),'| Galaxy:',round(s[1],4),'| QSO:',round(s[2],4),'| QSO_BAL:',round(s[3],4))\n",
     "print('Precision:','Star:',round(p[0],4),'| Galaxy:',round(p[1],4),'| QSO:',round(p[2],4),'| QSO_BAL:',round(p[3],4))\n",
     "print('Recall:','Star:',round(r[0],4),'| Galaxy:',round(r[1],4),'| QSO:',round(r[2],4),'| QSO_BAL:',round(r[3],4))\n",
-    "print('F_score:','Star:',round(f[0],4),'| Galaxy:',round(f[1],4),'| QSO:',round(f[2],4),'| QSO_BAL:',round(f[3],4))\n",
-    "print('Support:','Star:',round(s[0],4),'| Galaxy:',round(s[1],4),'| QSO:',round(s[2],4),'| QSO_BAL:',round(s[3],4))"
+    "print('F_score:','Star:',round(f[0],4),'| Galaxy:',round(f[1],4),'| QSO:',round(f[2],4),'| QSO_BAL:',round(f[3],4))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/steingate/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:34: UserWarning: Implicit dimension choice for log_softmax has been deprecated. Change the call to include dim=X as an argument.\n"
-     ]
-    },
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "float division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-264a1b531f85>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     print('Accuracy of %5s : %2d %%' % (\n\u001b[0;32m---> 18\u001b[0;31m         classes[i], 100 * class_correct[i] / class_total[i]))\n\u001b[0m",
-      "\u001b[0;31mZeroDivisionError\u001b[0m: float division by zero"
-     ]
+     "data": {
+      "text/plain": [
+       "\"\\nclasses = ('Star', 'Galaxy', 'QSO', 'QSO_BAL')\\nclass_correct = list(0. for i in range(4))\\nclass_total = list(0. for i in range(4))\\nwith torch.no_grad():\\n    for data in test_loader:\\n        images, labels = data\\n        outputs = net(images)\\n        _, predicted = torch.max(outputs, 1)\\n        c = (predicted == labels).squeeze()\\n        for i in range(4):\\n            label = labels[i]\\n            class_correct[label] += c[i].item()\\n            class_total[label] += 1\\n\\n\\nfor i in range(4):\\n    print('Accuracy of %5s : %2d %%' % (\\n        classes[i], 100 * class_correct[i] / class_total[i]))\\n\\n\""
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\"\n",
     "classes = ('Star', 'Galaxy', 'QSO', 'QSO_BAL')\n",
     "class_correct = list(0. for i in range(4))\n",
     "class_total = list(0. for i in range(4))\n",
@@ -660,7 +662,45 @@
     "\n",
     "for i in range(4):\n",
     "    print('Accuracy of %5s : %2d %%' % (\n",
-    "        classes[i], 100 * class_correct[i] / class_total[i]))"
+    "        classes[i], 100 * class_correct[i] / class_total[i]))\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "SpectraNET",
+     "Regression"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "class Net_R(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Net, self).__init__()\n",
+    "        self.conv1 = nn.Conv1d(1, 100, 10,stride=2)\n",
+    "        self.conv2 = nn.Conv1d(100, 100, 10,stride=2)\n",
+    "        self.conv3 = nn.Conv1d(100, 100, 10,stride=2)\n",
+    "        self.conv4 = nn.Conv1d(100, 100, 10,stride=2)\n",
+    "        self.pool = nn.MaxPool1d(2, 1)\n",
+    "        self.fc1 = nn.Linear(1800, 16)\n",
+    "        #self.fc1 = nn.Linear(10300, 16)\n",
+    "        self.fc2 = nn.Linear(16, 4)\n",
+    "\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        in_size = x.size(0)\n",
+    "        x = self.pool(F.relu(self.conv1(x)))\n",
+    "        x = self.pool(F.relu(self.conv2(x)))\n",
+    "        x = self.pool(F.relu(self.conv3(x)))\n",
+    "        x = self.pool(F.relu(self.conv4(x)))\n",
+    "        x = x.view(in_size, -1)\n",
+    "        x = F.relu(self.fc1(x))        \n",
+    "        x = self.fc2(x)\n",
+    "        return F.log_softmax(x)\n"
    ]
   },
   {
@@ -668,14 +708,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "net_R = Net_R()\n",
+    "print(net_R)\n",
+    "\n",
+    "optimizer = torch.optim.SGD(net.parameters(), lr=0.2)\n",
+    "loss_func = torch.nn.MSELoss()  \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
